# musicrs

./: CLAUDE.md  Cargo.toml  REAME.md
.config/: nextest.toml
.github/workflows/: ci.yml
src/: lib.rs  music.rs  stft.rs
tests/: broadband_test.rs  integration_test.rs  noisy_data_test.rs
tests/data/single-source/: README.md  single-source_1400Hz_0deg_1.0s.npy  single-source_1400Hz_0deg_2.0s.npy  single-source_1400Hz_120deg_1.0s.npy  single-source_1400Hz_120deg_2.0s.npy  single-source_1400Hz_160deg_1.0s.npy  single-source_1400Hz_160deg_2.0s.npy  single-source_1400Hz_40deg_1.0s.npy  single-source_1400Hz_40deg_2.0s.npy  single-source_1400Hz_80deg_1.0s.npy  single-source_1400Hz_80deg_2.0s.npy  single-source_2500Hz_0deg_1.0s.npy  single-source_2500Hz_0deg_2.0s.npy  single-source_2500Hz_120deg_1.0s.npy  single-source_2500Hz_120deg_2.0s.npy  single-source_2500Hz_160deg_1.0s.npy  single-source_2500Hz_160deg_2.0s.npy  single-source_2500Hz_40deg_1.0s.npy  single-source_2500Hz_40deg_2.0s.npy  single-source_2500Hz_80deg_1.0s.npy  single-source_2500Hz_80deg_2.0s.npy  single-source_300Hz_0deg_1.0s.npy  single-source_300Hz_0deg_2.0s.npy  single-source_300Hz_120deg_1.0s.npy  single-source_300Hz_120deg_2.0s.npy  single-source_300Hz_160deg_1.0s.npy  single-source_300Hz_160deg_2.0s.npy  single-source_300Hz_40deg_1.0s.npy  single-source_300Hz_40deg_2.0s.npy  single-source_300Hz_80deg_1.0s.npy  single-source_300Hz_80deg_2.0s.npy  single-source_3600Hz_0deg_1.0s.npy  single-source_3600Hz_0deg_2.0s.npy  single-source_3600Hz_120deg_1.0s.npy  single-source_3600Hz_120deg_2.0s.npy  (+56 more)
